# CNN-CUDA

./: CMakeLists.txt  test2.ppm
src/: Infer.cu  Infer.cuh  Train.cu  Train.cuh  main.cpp
src/cnn/: global_ptr_cuda.cu  global_ptr_cuda.cuh  optimization_method.h  tensor_t.h
